--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Document</title>
+	<title>Git Start Project</title>
 	<link rel="stylesheet"  href="css/main.css">
 </head>
 <body>
 <h1>Hello World!!!</h1>
+<p>This is git</p>
+
 </body>
 </html>
