--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 	<title>Git Start Project</title>
 	<link rel="stylesheet"  href="css/main.css">
 </head>
+
 <body>
+
 <h1>Hello World!!!</h1>
 <p>This is git</p>
-
-<p>Нежелательные изменения</p>
+<div>
+	<h2>Forth commit</h2>
+</div>
 
 </body>
+
 </html>
