Working on sidebar-02

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 	<aside>
 		<h1>Sidebar Header</h1>
 	</aside>
+	<ul>
+		<li>Item 1</li>
+		<li>Item 1</li>
+		<li>Item 1</li>
+		<li>Item 1</li>
+	</ul>
 
 </body>
 
